dealt with strange whitespace issues

--- a/diving-deeper-02-adding-the-header-starting-code/main.css
+++ b/diving-deeper-02-adding-the-header-starting-code/main.css
@@ -45,7 +45,7 @@ body {
 .top-nav{
    display: inline-block; 
    text-align:right;
-   width: calc(100%-49px);
+   width: calc(100%-54px);
 }
 
 .top-nav__items{
